indents -> 2 spaces, CloudFlareDNS yes, and meh
Signed-off-by: rxcmr <lythe1107@icloud.com>